Emission baking seems to be broken in recent Blender 2.8 Beta #60615

Closed
opened 2019-01-18 10:01:56 +01:00 by Lewis Toohey · 8 comments

System Information
Operating system: Ubuntu 18.10
Graphics card: Computer 1: Nvidia GeForce GTX Titan X and Computer 2: Intel Ultra HD 720 (two computers)

Blender Version
Broken: Blender 2.8 2757469824
Worked: (optional): Beta from approximately 11 January 2018

Short description of error
Baking gives incorrect results in the most recent beta of Blender 2.8 for some materials (e.g. a completely Black bake on all faces, or garbled results). Removing materials sometimes fixes this.

This is either a bug, or the "rules" for baking have changed in a way that is not obvious.

Exact steps for others to reproduce the error
Unfortunately it is just a hard problem to describe, and my results seem to be inconsistent. I have done my best to provide an example .blend.

Open the attached .blend file. Take note of:

  • The While illuminated windows displayed on the object (created by a mix of emission and Principled BSDF);
  • Only one texture, with a selected image node set to "Test512" for baking;
  • The UV map is ""UVMap" is active for rendering, but the UV map "Whole" is also specified in the shader editor for some elements of the material;

Switch the active UV map to "SimpleBake" (this third UV map is a unwrap of the entire model) , then Bake emission.

system-info.txt

Problem.blend

In previous betas this would achieve the expected result (i.e. it would bake the white emission windows - using the UVmap active for rendering, and the one one manually specified in the shader editor.

In the newer betas this results in a totally Black bake (for me, anyway).

Given how this used to work fine and now doesn't, and at one point I had two computers with older and newer betas that gave different results, I believe this to be a bug that has crept in in the recent betas

**System Information** Operating system: Ubuntu 18.10 Graphics card: Computer 1: Nvidia GeForce GTX Titan X and Computer 2: Intel Ultra HD 720 (two computers) **Blender Version** Broken: Blender 2.8 2757469824bb Worked: (optional): Beta from approximately 11 January 2018 **Short description of error** Baking gives incorrect results in the most recent beta of Blender 2.8 for some materials (e.g. a completely Black bake on all faces, or garbled results). Removing materials sometimes fixes this. This is either a bug, or the "rules" for baking have changed in a way that is not obvious. **Exact steps for others to reproduce the error** Unfortunately it is just a hard problem to describe, and my results seem to be inconsistent. I have done my best to provide an example .blend. Open the attached .blend file. Take note of: - The While illuminated windows displayed on the object (created by a mix of emission and Principled BSDF); - Only one texture, with a selected image node set to "Test512" for baking; - The UV map is ""UVMap" is **active for rendering**, but the UV map "Whole" is **also specified in the shader editor** for some elements of the material; **Switch the active UV map to "SimpleBake"** (this third UV map is a unwrap of the entire model) , then Bake **emission**. [system-info.txt](https://archive.blender.org/developer/F6325954/system-info.txt) [Problem.blend](https://archive.blender.org/developer/F6325958/Problem.blend) In previous betas this would achieve the expected result (i.e. it would bake the white emission windows - using the UVmap active for rendering, and the one one manually specified in the shader editor. In the newer betas this results in a totally Black bake (for me, anyway). Given how this used to work fine and now doesn't, and at one point I had two computers with older and newer betas that gave different results, I believe this to be a bug that has crept in in the recent betas
Author

Added subscriber: @lewis2e

Added subscriber: @lewis2e

This issue was referenced by c9938ebb00

This issue was referenced by c9938ebb0064675a17c92e8112fc4d416bba5f7c
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I'm bisecting this now.

I'm bisecting this now.
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

@brecht, this bug has been introduced in e4c78436c6.
Bisecting took way to long, I really should finish my derivedrepo project at some point ^^

@brecht, this bug has been introduced in e4c78436c6. Bisecting took way to long, I really should finish my `derivedrepo` project at some point ^^
Author

@JacquesLucke - Well let me say thank you! I appreciate your time and efforts in tracking down the source of this bug.

@JacquesLucke - Well let me say thank you! I appreciate your time and efforts in tracking down the source of this bug.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60615
No description provided.